--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -20,6 +19,7 @@
         android:roundIcon="@drawable/logo_xpen_bg_violet_rd"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".HomePage.HomeActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -61,9 +61,9 @@
             android:parentActivityName=".DashboardActivity" />
         <activity
             android:name=".PaymentActivity"
-            android:parentActivityName=".ApprovalActivity"></activity>
-        <activity android:name=".AccountsActivity"></activity>
-        <activity android:name=".Dashboard2Activity"></activity>
+            android:parentActivityName=".ApprovalActivity" />
+        <activity android:name=".AccountsActivity" />
+        <activity android:name=".Dashboard2Activity" />
     </application>
 
 </manifest>
